--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <div class="container">
 
        <div class="box">
-        <a href="./img/imga.jpg">
-        <img src="./img/img11.jpg" alt="">
+        <a href="./imga.jpg">
+        <img src="./img11.jpg" alt="">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
