--- a/about.html
+++ b/about.html
@@ -35,17 +35,17 @@
     <section id="boxes">
      <div class="container">
        <div class="box">
-         <img src="./img/img31.jpg">
+         <img src="./img31.jpg">
          <h3>Mimi</h3>
          <p> </p>
        </div>
        <div class="box">
-         <img src="./img/img32.jpg">
+         <img src="./img32.jpg">
          <h3>Sarah</h3>
          <p> </p>
        </div>
        <div class="box">
-         <img src="./img/img33.jpg">
+         <img src="./img33.jpg">
          <h3>Christina</h3>
          <p> </p>
        </div>
