--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
 
        <div class="box">
-        <a href="./imga.jpg">
+        <a href="./img/imga.jpg">
         <img src="./img11.jpg" alt="">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
