--- a/about.html
+++ b/about.html
@@ -35,17 +35,17 @@
     <section id="boxes">
      <div class="container">
        <div class="box">
-         <img src="./img/img31.jpg">
+         <img src="./img31.jpg">
          <h3>Mimi</h3>
          <p> </p>
        </div>
        <div class="box">
-         <img src="./img/img32.jpg">
+         <img src="./img32.jpg">
          <h3>Sarah</h3>
          <p> </p>
        </div>
        <div class="box">
-         <img src="./img/img33.jpg">
+         <img src="./img33.jpg">
          <h3>Christina</h3>
          <p> </p>
        </div>
@@ -54,22 +54,22 @@
    <section id="boxes">
       <div class="container">
         <div class="box">
-          <img src="./img/img34.jpg">
+          <img src="./img34.jpg">
           <h3>Kim</h3>
           <p> </p>
         </div>
         <div class="box">
-          <img src="./img/img31.jpg">
+          <img src="./img31.jpg">
           <h3>Mania</h3>
           <p> </p>
         </div>
         <div class="box">
-          <img src="./img/img36.jpg">
+          <img src="./img36.jpg">
           <h3>Stephanie</h3>
         <div>
    </section>
           <p class="dark">
-<bold>Our more than 30 years of experience combined will help you look beautifull.Your satisfaction is guarenteed at the time of the service.
+<bold>Our more than 30 years of experience combined will help you look beautifull.Your satisfaction is guaranteed at the time of the service.
 
          </p>
         </div>
