--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
  			  <!-- Wrapper for slides -->
  			  <div class="carousel-inner" role="listbox">
  			    <div class="item active">
- 			      <img src="./img/img41.jpg" alt="...">
+ 			      <img src="./img41.jpg" alt="...">
  					      <div class=" Salon">
  					        <h2>Elite Affordable Salon</h2>
  					      </div>
  			    </div>
  				    <div class="item">
- 				      <img src="./img/img42.jpg" alt="...">
+ 				      <img src="./img42.jpg" alt="...">
   					      <div class="Product range">
  					        <h2>Our product Range</h2>
  					      </div>
  				    </div>
  						<div class="item">
- 						 <img src="./img/img43.jpg" alt="...">
+ 						 <img src="./img43.jpg" alt="...">
  								 <div class="Product range">
- 								 <h2>Salon Beautifull</h2>
+ 								 <h2>Experience the Art of Threading</h2>
  							 </div>
  					 </div>
   			  </div>
@@ -81,21 +81,21 @@
     <div class="container">
 
        <div class="box">
-        <a href="./img/imga.jpg">
-        <img src="./img/img11.jpg" alt="">
+        <a href="./imga.jpg">
+        <img src="./img11.jpg" alt="">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="./img/imgb.jpg">
-        <img src="./img/img22.jpg" alt="">
+        <a href="./imgb.jpg">
+        <img src="./img22.jpg" alt="">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
 
       <div class="box">
-       <a href="https://maps.google.com/maps?q=Shear+Beauty+Salon,+1345+W+Granada+Blvd,+Ormond+Beach,+FL&hl=en&ll=29.263264,-81.110172&spn=0.021902,0.038581&sll=27.698638,-83.804601&sspn=11.365986,19.753418&oq=Shear&t=h&hq=Shear+Beauty+Salon,&hnear=1345+W+Granada+Blvd,+Ormond+Beach,+Florida+32174&z=15&iwloc=A"><img src="./img/img-loc.jpg"></a>
+       <a href="https://maps.google.com/maps?q=Shear+Beauty+Salon,+1345+W+Granada+Blvd,+Ormond+Beach,+FL&hl=en&ll=29.263264,-81.110172&spn=0.021902,0.038581&sll=27.698638,-83.804601&sspn=11.365986,19.753418&oq=Shear&t=h&hq=Shear+Beauty+Salon,&hnear=1345+W+Granada+Blvd,+Ormond+Beach,+Florida+32174&z=15&iwloc=A"><img src="./img-loc.jpg"></a>
        <h3>At I-95 and W. Granada</h3>
        <p>Click above to go straight to Google Maps</p>
       </div>
