--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content=" salon, Style, Color, Highlight, Updos, Bridal, Hair extentions.">
   <meta name="author" content="Al Jiwani">
   <title>Shear Beauty Salon | Welcome</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
