--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
     <div class="container">
 
        <div class="box">
-        <a href="imga.jpg">
+        <a href="imga.JPG">
           <img src="./img11.jpg" alt="...">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="imgb.jpg">
+        <a href="imgb.JPG">
         <img src="./img22.jpg" alt="">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
