--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
        <div class="box">
         <a href="imgb.JPG">
-        <img src="./img22.jpg" alt="">
+        <img src="./img22.jpg" alt="...">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
