--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
        <div class="box">
         <a href="imga.JPG">
-          <img src="./img11.jpg" alt="...">
+          <img src="./img11.jpg">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
