--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
        <div class="box">
         <a href="imgb.JPG">
-        <img src="./img12.jpg" alt="...">
+        <img src="./img12.jpg"> 
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
