--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
 
        <div class="box">
-        <a href="imga.JPG">
+        <a href="img11.JPG">
         <img src="./img11.jpg">
       
         <h3>386 256-4793</h3>
@@ -89,7 +89,7 @@
        </div>
 
        <div class="box">
-        <a href="imgb.JPG">
+        <a href="img12.JPG">
         <img src="./img12.jpg"> 
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
