--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
     <div class="container">
 
        <div class="box">
-        <a href="img11.JPG">
-        <img src="./img11.jpg">
+        <a href="imga.JPG">
+        <img src="./imga.jpg">
       
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="img12.JPG">
-        <img src="./img12.jpg"> 
+        <a href="imgb.JPG">
+        <img src="./imgb.jpg"> 
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
