--- a/index.html
+++ b/index.html
@@ -77,19 +77,18 @@
 </p>
   </section>
 
-  <section id="boxes">
     <div class="container">
-
+      <section id="boxes">
        <div class="box">
-        <a href="imga.jpg">
-          <img src="./img11.jpg" alt="">
+        <a href="./imga.jpg">
+          <img src="./img11.jpg" alt="...">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="imgb.jpg">
-        <img src="./img22.jpg" alt="">
+        <a href="./imgb.jpg">
+        <img src="./img22.jpg" alt="...">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
@@ -99,9 +98,8 @@
        <h3>At I-95 and W. Granada</h3>
        <p>Click above to go straight to Google Maps</p>
       </div>
-    </div>
   </section>
-
+</div>
  </body>
  <footer>
   <p>Sarah's Web Design copyright &copy; 2017.</p>
