--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  								 <h2>Salon Beautifull</h2>
  							 </div>
  					 </div>
-  			  
+  			  </div>
 
 
  			  <!-- Controls -->
@@ -80,15 +80,15 @@
     <div class="container">
       <section id="boxes">
        <div class="box">
-        <a href="imga.jpg">
+        <a href="img11.jpg">
           <img src="./img11.jpg" alt="...">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="imgb.jpg">
-        <img src="./img22.jpg" alt="...">
+        <a href="img11.jpg">
+        <img src="./img11.jpg" alt="...">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
