--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <!meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Shear Beauty Salon">
   <meta name="keywords" content=" salon, Style, Color, Highlight, Updos, Bridal, Hair extentions.">
@@ -80,15 +80,15 @@
     <div class="container">
       <section id="boxes">
        <div class="box">
-        <a href="img11.jpg">
+        <a href="imga.jpg">
           <img src="./img11.jpg" alt="...">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="img11.jpg">
-        <img src="./img11.jpg" alt="...">
+        <a href="imgb.jpg">
+        <img src="./img12.jpg" alt="...">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
        </div>
