--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
     </p>
 </p>
   </section>
+  <div class="conainer">
+		<div class="row">
+			<div class="col-md-4 box">
+				<div class="well">
+					<span class="glyphicon glyphicon-phone"></span>
+					<h3>Salon Beautifull</h3>
+          <img src="./img11.jpg" alt="...">
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam libero diam, molestie non viverra eget, aliquet et odio. Vestibulum quis molestie neque.</p>
+				</div>
+			</div>
+
+			<div class="col-md-4 box">
+				<div class="well">
+					<span class="glyphicon glyphicon-film"></span>
+					<h3>Hi End Product</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam libero diam, molestie non viverra eget, aliquet et odio. Vestibulum quis molestie neque.</p>
+				</div>
+			</div>
+
+			<div class="col-md-4 box">
+				<div class="well">
+					<span class="glyphicon glyphicon-search"></span>
+					<h3>Directions</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam libero diam, molestie non viverra eget, aliquet et odio. Vestibulum quis molestie neque.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
     <div class="container">
       <section id="boxes">
