--- a/services.html
+++ b/services.html
@@ -43,13 +43,13 @@
           <li></br></li>
         <li>BASIC</br></br>
         </li>
-        <li>  Women  Shampoo,  Cut	  	             $  1 7
+        <li>  Women  Shampoo,  Cut	  	             $  20+
         </li>
-        <li>    Women Shampoo, Cut, Blowdry		25 +</br>
+        <li>    Women Shampoo, Cut, Blowdry		28+</br>
         </li>
-        <li>  Men  Shampoo,  Cut   		 	1 5</br>
+        <li>  Men  Shampoo,  Cut   		 	17</br>
         </li>
-        <li>    Beard  or  Neck Trim			  7</br>
+        <li>   Kids haircut		  14</br>
           </br>
         </li>
         <li>VALUE PACKAGES</br></br>
@@ -58,23 +58,23 @@
         <li>(Include haircut, shampoo, treatment & blowdry)</br>
 
         </li>
-        <li>  Sunshine Color Pack			 69</br>
+        <li>  Sunshine Color Pack			 72</br>
         </li>
-        <li>  Sunshine Pack – Full Highlights	                  105</br>
+        <li>  Sunshine Pack – Full Highlights	                  110</br>
         </li>
-        <li>Sunshine Pack – Partial Highlights		 75</br>
-        </li>
-
-        <li>  Sunshine Lift 				 80</br>
+        <li>Sunshine Pack – Partial Highlights		 79</br>
         </li>
 
-        <li>  Sunshine Pack Perm			 72</br>
+        <li>  Sunshine Lift 				 85</br>
         </li>
 
-        <li>Express Blowout				 80</br>
+        <li>  Sunshine Pack Perm			 75</br>
         </li>
 
-        <li>Keratin Treatment				1 40 +</br>
+        <li>Express Blowout				 99</br>
+        </li>
+
+        <li>Keratin Treatment				150 +</br>
         </br>
         </li>
 
@@ -85,22 +85,22 @@
           <li> ( Rod set, Roller wrap, Straightening set)	38</br>
           </li>
 
-          <li> Quick Do's 				1 8  +</br>
+          <li> Quick Do's 				25  +</br>
           </li>
 
-          <li>Special Occasion Design 			30 +</br>
+          <li>Special Occasion Design 			45 +</br>
 
           </li>
-          <li> Individual  foil  (Max 6 foils)	each		5</br>
+          <li> Individual  foil  (Max 6 foils)	each		6</br>
            </li>
-           <li>Partial Highlights 				55+</br>
+           <li>Partial Highlights 				59+</br>
            </li>
-           <li>Full Highlights 				80+</br>
-            <li>   All Over Lift and Tone			60+</br>
+           <li>Full Highlights 				85+</br>
+            <li>   All Over Lift and Tone			65+</br>
             </li>
-            <li> Touch Up				50
-            </li>
-            <li>   Additional Color   		add	20
+            <li> Touch Up			52
+              <li>Color Camo for Men     45</li>
+              <li>Fashion color      50+</li>
             </br></br>
             </li>
 
@@ -115,7 +115,7 @@
 
               </li>
 
-              <li>  Permanent Wave			55</br>
+              <li>  Permanent Wave			55+</br>
               </li>
 
               <li>  Designer Perm Wrap			65 +</br>
@@ -133,8 +133,11 @@
 </br>
               </li>
 
-                <li>OTHER</br></br>
-
+                <li>OTHER</br></br></li>
+              <li>Eyelashes Extention        60+</li>
+              <li>Bridal Updo         55+</li>
+              <li>Bridal Makeup       50+</li>
+              <li>  Olaplex Treatment            25+
               </li><li>  Chemistry Treatment 			1 3</br>
               </li><li>Clarifying Treatment 			1 5</br>
               </li><li>Eyebrow Threading 			1 0</br>
@@ -147,11 +150,13 @@
               </li><li>Full Legs				40</br>
               </li><li>Back					30</br>
 
-               </li>
+              </li><li>
 
-              <li>  We also offer Bridal
+              </li>
+
+              <h4>  We also offer Bridal
             Prom and Homecoming services.
-          </li>
+          </h4>
         </ul>
 
 
