--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="Shear Beauty Salon">
   <meta name="keywords" content=" salon, Style, Color, Highlight, Updos, Bridal, Hair extentions.">
@@ -39,19 +39,19 @@
  			  <!-- Wrapper for slides -->
  			  <div class="carousel-inner" role="listbox">
  			    <div class="item active">
- 			      <img src="./img41.jpg" alt="...">
+ 			      <img src="./img41.jpg" alt="">
  					      <div class=" Salon">
  					        <h2>Elite Affordable Salon</h2>
  					      </div>
  			    </div>
  				    <div class="item">
- 				      <img src="./img42.jpg" alt="...">
+ 				      <img src="./img42.jpg" alt="">
   					      <div class="Product range">
  					        <h2>Our product Range</h2>
  					      </div>
  				    </div>
  						<div class="item">
- 						 <img src="./img43.jpg" alt="...">
+ 						 <img src="./img43.jpg" alt="">
  								 <div class="Product range">
  								 <h2>Salon Beautifull</h2>
  							 </div>
@@ -109,16 +109,16 @@
       <section id="boxes">
        <div class="box">
         <a href="imga.jpg">
-          <img src="./img11.jpg" alt="...">
+          <img src="./imga.jpg" alt="">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
         <a href="imgb.jpg">
-        <img src="./img12.jpg" alt="...">
+        <img src="./imgb.jpg" alt="">
         <h3> Products</h3>
-        <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell....</P>
+        <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell.</P>
        </div>
 
       <div class="box">
