--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </div>
   </HEADER>
-
+<Section>
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">			  <!-- Indicators -->
  			  <ol class="carousel-indicators">
  			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -70,6 +70,7 @@
  			  </a>
  			</div>
       </div>
+      </Section>
   <section id="newsletter">
     <p>
      We're located a bit east from I-95 and West Granada.</br> Drop by at 1345 Granada Blvd. #4 Ormond Beach, FL 32174.
