--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
     <div class="container">
       <section id="boxes">
        <div class="box">
-        <a href="imga.jpg">
+        <a href="./imga.jpg">
           <img src="./imga.jpg" alt="">
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
        </div>
 
        <div class="box">
-        <a href="imgb.jpg">
+        <a href="./imgb.jpg">
         <img src="./imgb.jpg" alt="">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell.</P>
