--- a/services.html
+++ b/services.html
@@ -40,6 +40,7 @@
   </style>
   <section class='main'>
         <ul id="services">
+        <ul style="list-style: none;"><li>
           <li></br></li>
         <li>BASIC</br></br>
         </li>
