--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
        </div>
 
        <div class="box">
-        <a href="./imgb.jpg">
+        <a href="./imgb.JPG">
         <img src="./imgb.jpg" alt="">
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell.</P>
