--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 	
       <section id="boxes">
         <div class="box">
-	<img src="./imga.jpg" alt="">
+	<img src="./img41.jpg" alt="">
         <a href="./imga.jpg">        
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
         </div>
 
         <div class="box">
-	<img src="./imgb.jpg" alt=""> 
+	<img src="./img42.jpg" alt=""> 
         <a href="./imgb.JPG">
         
         <h3> Products</h3>
