--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
         <li>VALUE PACKAGES</br></br>
 
         </li>
-        <li>(Include haircut, shampoo, treatment & blowdry)</br>
+        <li>(Include haircut, shampoo, treatment & airdry)</br>
 
         </li>
         <li>  Sunshine Color Pack			 72</br>
