--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
       <section id="boxes">
         <div class="box">
 	<img src="./img41.jpg" alt="">
-        <a href="./imga.jpg">        
+        <a href="./img11.JPG">        
         <h3>386 256-4793</h3>
         <P><strong>1345 W Granada Blvd</br>Ormond Beach FL 32174.</P>
         </div>
 
         <div class="box">
 	<img src="./img42.jpg" alt=""> 
-        <a href="./imgb.JPG">
+        <a href="./img22.JPG">
         
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell.</P>
