--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <div class="box">
 	<img src="./img42.jpg" alt=""> 
-        <a href="./img22.JPG">
+        <a href="./imgb.JPG">
         
         <h3> Products</h3>
         <P><strong>Redkin, Moroccon Oil,</br>Paul Mitchell.</P>
