--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<span class="glyphicon glyphicon-phone"></span>
 					<h3>Salon Beautifull</h3>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam libero diam, molestie non viverra eget, aliquet et odio. Vestibulum quis molestie neque.</p>
+					<h4>Voted Best in Ormond Beach for Color and Highlights.</h4>
 				</div>
 			</div>
 
@@ -92,7 +92,7 @@
 				<div class="well">
 					<span class="glyphicon glyphicon-film"></span>
 					<h3>Hi End Product</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam libero diam, molestie non viverra eget, aliquet et odio. Vestibulum quis molestie neque.</p>
+					<h4>Redkin, Paul Mitchell, Dermologica, Moroccan Oil and such.</h4>
 				</div>
 			</div>
 
@@ -100,7 +100,8 @@
 				<div class="well">
 					<span class="glyphicon glyphicon-search"></span>
 					<h3>Directions</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam libero diam, molestie non viverra eget, aliquet et odio. Vestibulum quis molestie neque.</p>
+					<h4> A bit East of I-95 on Granada Blvd in Ormond Beach FL. 
+					</h4>
 				</div>
 			</div>
 		</div>
