--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <section id="boxes">
      <div class="container">
        <div class="box">
-         <img src="./img31.jpg">
+         <a herf="https://www.facebook.com/shearbeautyonline/"><img src="./img31.jpg">
          <h3>Mimi</h3>
          <p> </p>
        </div>
