--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
 
        <div class="box">
-       <a href="https://maps.google.com/maps?q=Shear+Beauty+Salon,+1345+W+Granada+Blvd,+Ormond+Beach,+FL&hl=en&ll=29.263264,-81.110172&spn=0.021902,0.038581&sll=27.698638,-83.804601&sspn=11.365986,19.753418&oq=Shear&t=h&hq=Shear+Beauty+Salon,&hnear=1345+W+Granada+Blvd,+Ormond+Beach,+Florida+32174&z=15&iwloc=A"><img src="./IMG-loc.JPG"></a>
+       <a href="https://maps.google.com/maps?q=Shear+Beauty+Salon,+1345+W+Granada+Blvd,+Ormond+Beach,+FL,+32174"><img src="./IMG-loc.JPG"></a>
        <h3>At I-95 and W. Granada</h3>
        <p>Click above to go straight to Google Maps</p>
        </div>
